⚡️ IMPROVE: update coloring and publish config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Manjaro Dark",
   "description": "Manjaro themes - color scheme based on Owl, OneDark Pro, Nord, Tokyo and Halcyon",
   "icon": "icon.png",
-  "publisher": "Asapdotid",
+  "publisher": "asapdotid",
   "author": {
     "name": "Asapdotid",
     "email": "asapdotid@gmail.com"
